# eosio-contracts

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  hypha.sh  moon_phases.csv  moon_phases_test.csv  more-seeds.json  perm.json  perm_main.json  telos.sh  telos_test.sh
dao-go/: .gitignore  assignments_test.go  badges_test.go  dao.go  dao_test.go  decide.go  environment_test.go  go.mod  go.sum  helpers_test.go  proposals.go  roles_test.go  types.go
docs/: badge_assignments.md  badges.md  graph.md  root_node.md
hyphadao/: hyphadao.abi
hyphadao/hyphadao/: hyphadao.abi
include/: bank.hpp  board.hpp  common.hpp  cryptoutil.hpp  document_graph.hpp  eosio.trail.hpp  eosiotoken.hpp  holocracy.hpp  hyphadac.hpp  hyphadao.hpp  member.hpp  telos.tfvt.hpp  trail.hpp  trail.system.hpp  trail.voting.hpp
include/Proposals/: BadgeAssignmentProposal.hpp  BadgeProposal.hpp  Proposal.hpp  ProposalFactory.hpp  RoleProposal.hpp  assignment_proposal.hpp  badge_assignment_proposal.hpp  badge_proposal.hpp  proposal_factory.hpp  role_proposal.hpp
include/document_graph/: content.hpp  content_group.hpp  document.hpp  document_graph.hpp  edge.hpp
resources/: hyphadao.contracts.md
scripts/: README.md  dao.js  hyphaQueries.js  loadPhases.js  package-lock.json  package.json
scripts/payloads/: architect.json  badge_proposal.json  config.json  contribution-test1.json  periods.csv  proposal_options.json  testnet-config.json  transaction.json
scripts/tests/: assignment-test-edit.json  assignment-test1.json  assignment-test10.json  assignment-test2.json  assignment-test3.json  assignment-test4.json  assignment-test5.json  assignment-test6.json  assignment-test7.json  assignment-test8.json  assignment-test9.json  config.json  contribution-test1.json  contribution-test2.json  contribution-test3.json  contribution-test4.json  contribution-test9.json  role-test1.json  role-test2.json  role-test3.json  role-test4.json  role-test5.json  role-test6.json  role-test7.json
src/: CMakeLists.txt  accessors.cpp  badge.cpp  bank.cpp  calculation.cpp  config.cpp  decide.cpp  document.cpp  document_graph.cpp  hyphadao.cpp  legacy_proposal.cpp  member.cpp  membership.cpp  object.cpp  proposal.cpp  role.cpp  utility.cpp
src/classes/: bank.cpp  board.cpp  holocracy.cpp
src/document_graph/: accessors.cpp  content_group.cpp  creators.cpp  document.cpp  document_graph.cpp  edge.cpp  edges.cpp
src/documents/: accessors.cpp  document_graph.cpp  edges.cpp
src/eosio.trail/: CMakeLists.txt  eosio.trail.cpp
src/eosiotoken/: CMakeLists.txt  eosiotoken.cpp
src/hyphadac/: CMakeLists.txt  hyphadac.cpp
src/hyphadao/: CMakeLists.txt  hyphadao.cpp
src/proposals/: BadgeAssignmentProposal.cpp  BadgeProposal.cpp  ProposalFactory.cpp  RoleProposal.cpp  assignment_proposal.cpp  badge_assignment_proposal.cpp  badge_proposal.cpp  proposal.cpp  proposal_factory.cpp  role_proposal.cpp
src/telos.tfvt/: CMakeLists.txt  telos.tfvt.cpp
tests/: alex_transfer.json  badges_test.go  dao.go  dao.js  environment.go  environment_test.go  go.mod  go.sum  hyphaQueries.js  hyphabank.sh  hyphdac.test.js  loadPhases.js  loadPhases.js.orig  local_test.go  package.json  packed_transfer.json  telosdecide_test.go
tests/actions/: apply.js
tests/local/: environment_test.go  local_test.go  nativeballot_localtest.go
tests/proposals/: assignment-test2.json  assignment-test3.json  assignment-test5.json  (+9 more)
(+22 files in other folders)
